已完成：vue项目正常生成 待解决：vue项目部署，应用封面与下载